--- a/Hangman/Hangman/Base.lproj/Main.storyboard
+++ b/Hangman/Hangman/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="33m-bG-32Y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="33m-bG-32Y">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,12 +21,86 @@
                     <view key="view" contentMode="scaleToFill" id="xKS-yl-l6T">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" image="hangman1" translatesAutoresizingMaskIntoConstraints="NO" id="hea-PF-Ssz">
+                                <rect key="frame" x="87" y="72" width="200" height="200"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bU5-Nk-qMJ">
+                                <rect key="frame" x="166" y="280" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Incorrect Guesses:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dS0-gs-4AS">
+                                <rect key="frame" x="115" y="323" width="144" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnA-j0-Hb8">
+                                <rect key="frame" x="0.0" y="369" width="375" height="216"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="U5G-uM-yuP"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="xKS-yl-l6T" id="bu7-8B-2xG"/>
+                                    <outlet property="delegate" destination="xKS-yl-l6T" id="PJK-5Q-z0b"/>
+                                </connections>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bGD-Uo-OJL">
+                                <rect key="frame" x="159" y="593" width="57" height="30"/>
+                                <state key="normal" title="Guess A"/>
+                                <connections>
+                                    <action selector="guessPressed:" destination="33m-bG-32Y" eventType="touchUpInside" id="8F1-zP-EMo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="46M-J7-IP1">
+                                <rect key="frame" x="284" y="20" width="75" height="30"/>
+                                <state key="normal" title="New Game"/>
+                                <connections>
+                                    <action selector="newGame:" destination="33m-bG-32Y" eventType="touchUpInside" id="SkV-bF-XhY"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Hangman" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nwz-oo-VRn">
+                                <rect key="frame" x="150" y="43" width="74" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="46M-J7-IP1" firstAttribute="top" secondItem="fga-sG-nzY" secondAttribute="bottom" constant="8" symbolic="YES" id="1hh-z1-dWc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="46M-J7-IP1" secondAttribute="trailing" id="2L6-08-sXh"/>
+                            <constraint firstItem="bU5-Nk-qMJ" firstAttribute="top" secondItem="hea-PF-Ssz" secondAttribute="bottom" constant="8" symbolic="YES" id="A5P-hD-cmx"/>
+                            <constraint firstItem="Nwz-oo-VRn" firstAttribute="centerY" secondItem="46M-J7-IP1" secondAttribute="centerY" id="BaV-h9-Zhm"/>
+                            <constraint firstItem="Nwz-oo-VRn" firstAttribute="centerX" secondItem="xKS-yl-l6T" secondAttribute="centerX" id="Eqr-Sq-XoI"/>
+                            <constraint firstItem="hea-PF-Ssz" firstAttribute="top" secondItem="Nwz-oo-VRn" secondAttribute="bottom" constant="8" symbolic="YES" id="NXV-5y-ixN"/>
+                            <constraint firstItem="Nwz-oo-VRn" firstAttribute="top" secondItem="fga-sG-nzY" secondAttribute="bottom" constant="8" symbolic="YES" id="QZ6-Zw-CS5"/>
+                            <constraint firstItem="lnA-j0-Hb8" firstAttribute="top" secondItem="dS0-gs-4AS" secondAttribute="bottom" constant="8" symbolic="YES" id="Rl9-cK-v4M"/>
+                            <constraint firstItem="lnA-j0-Hb8" firstAttribute="centerX" secondItem="dS0-gs-4AS" secondAttribute="centerX" id="SGL-9x-YL9"/>
+                            <constraint firstItem="bGD-Uo-OJL" firstAttribute="centerX" secondItem="lnA-j0-Hb8" secondAttribute="centerX" id="ce9-4X-dda"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lnA-j0-Hb8" secondAttribute="trailing" constant="50" id="hU2-QF-6ww"/>
+                            <constraint firstItem="bGD-Uo-OJL" firstAttribute="top" secondItem="lnA-j0-Hb8" secondAttribute="bottom" constant="8" symbolic="YES" id="jVR-EG-3q2"/>
+                            <constraint firstItem="bU5-Nk-qMJ" firstAttribute="centerX" secondItem="hea-PF-Ssz" secondAttribute="centerX" id="mTx-ob-OdA"/>
+                            <constraint firstItem="hea-PF-Ssz" firstAttribute="leading" secondItem="xKS-yl-l6T" secondAttribute="leadingMargin" constant="71" id="nJk-zD-BVn"/>
+                            <constraint firstItem="Rkb-O3-rip" firstAttribute="top" secondItem="bGD-Uo-OJL" secondAttribute="bottom" constant="8" symbolic="YES" id="wnp-lN-fxp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="guessBtn" destination="bGD-Uo-OJL" id="vbo-Dz-u21"/>
+                        <outlet property="guesses" destination="dS0-gs-4AS" id="usV-Of-U1p"/>
+                        <outlet property="hangman" destination="hea-PF-Ssz" id="uXB-r1-cls"/>
+                        <outlet property="letterPicker" destination="lnA-j0-Hb8" id="xji-B9-hl8"/>
+                        <outlet property="wordView" destination="bU5-Nk-qMJ" id="tkh-7u-oNT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GJo-zA-LYW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="652" y="-133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hangman1" width="200" height="200"/>
+    </resources>
 </document>
